servicewild.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp1-service-wild
spec:
  type: LoadBalancer
  selector:
    app: myapp1-wild
  ports:
  - port: 82
   # protocol: TCP
    targetPort: 8080
