ingresswild.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rakesh-ingress-wild
  #annotations:
    # If the class annotation is not specified it defaults to "gce".
    #kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      # - path: /app2
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: myapp1-service-wild
      #       port:
      #         number: 82
      - path: /rk
        pathType: ImplementationSpecific
        backend:
          service:
            name: myapp3-service
            port:
              number: 81
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: myapp1-service-wild
            port:
              number: 82
